[project]
name = "uncopylaw"
version = "0.1.0"
description = "Evaluating Unlearning Copyrighted Materials for Lawful Use in Large Language Models "
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.2",
    "numba>=0.61.0",
    "polars>=1.26.0",
    "python-dotenv>=1.1.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
